06_rect/grade.txt
Grading at Tue Sep 15 20:21:54 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘canonicalize’:
rectangle.c:33:8: error: ‘rectangle {aka struct <anonymous>}’ has no member named ‘heigth’
   if (r.heigth < 0){
        ^
The code did not compile!

Overall Grade: F
